# SlopeScript

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LANGUAGE_SPEC.md  LICENSE  README.md  pyproject.toml  slopescript  slopescript.py
.github/workflows/: ci.yml  pages.yml
benchmarks/: fib.slope  loop.slope
examples/: conditions_check.slope  counter.slope  guess_number.slope  hello.slope  higher_order.slope  lodge_menu.slope  mountain_tour.slope  radio_check.slope  ski_day.slope  ski_patrol.slope  speed_calculator.slope  trail_journal.slope  trail_selector.slope  tricks.slope  vertical_tracker.slope
examples/lib/: slopemath.slope
playground/: index.html
tests/: test_slopescript.py
wiki/: Cheat-Sheet.md  Contributing.md  Control-Flow.md  Error-Handling.md  Examples.md  FAQ.md  Files-and-the-Radio.md  Getting-Started.md  Glossary.md  Grammar.md  Home.md  Language-Internals.md  Modules.md  Playground.md  README.md  REPL.md  Racks-and-Lockers.md  Standard-Library.md  The-Language-Tour.md  Tricks-Functions.md  Types-and-Values.md  Variables-and-Operators.md  _Footer.md  _Sidebar.md  publish.sh
