[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slopescript"
version = "2.1.0"
description = "A skiing-themed programming language where code flows downhill 🎿"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Arnav Jhunjhunwala" }]
keywords = ["programming-language", "interpreter", "skiing", "education", "fun"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/arnavj/slopescript"
Documentation = "https://github.com/arnavj/slopescript/blob/main/LANGUAGE_SPEC.md"
Issues = "https://github.com/arnavj/slopescript/issues"

[project.scripts]
slope = "slopescript:main"
slopescript = "slopescript:main"

[tool.setuptools]
py-modules = ["slopescript"]
